--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,54 @@
+/*    font-family: 'open_sansregular';
+    src: url('fuentes/OpenSans-Regular-webfont.eot');
+    src: url('fuentes/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fuentes/OpenSans-Regular-webfont.woff') format('woff'),
+         url('fuentes/OpenSans-Regular-webfont.ttf') format('truetype'),
+         url('fuentes/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}*/
+
+
+@font-face {
+	font-family: 'puls2014';
+	src:url('fuentes/puls2014.eot');
+	src:url('fuentes/puls2014.eot?#iefix') format('embedded-opentype'),
+		url('fuentes/puls2014.woff') format('woff'),
+		url('fuentes/puls2014.ttf') format('truetype'),
+		url('fuentes/puls2014.svg#puls2014') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'puls2014';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-f-arriba:before {
+	content: "\e600";
+}
+.icon-f-abajo:before {
+	content: "\e601";
+}
+.icon-star:before {
+	content: "\e602";
+}
+.icon-pencil:before {
+	content: "\e603";
+}
+
+
 a
 {
 	color: #22BCE0;
@@ -6,7 +57,7 @@ a
 body
 {
 	background: #EEEEEE;
-	font-family: Arial;
+	font-family: "Open Sans";
 	font-size: 16px;
 }
 
