--- a/estilos.css
+++ b/estilos.css
@@ -9,7 +9,7 @@
 
 }*/
 
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 @font-face {
 	font-family: 'puls2014';
 	src:url('fuentes/puls2014.eot');
@@ -406,4 +406,53 @@ aside
 		width: 100%;
 	}
 
+}
+
+
+/**
+*FORMULARIO
+**/
+
+.formulario
+{
+	text-align: right;
+	padding: 1em;
+	display: block;
+}
+
+.formulario input
+{
+	border-radius: 5px;
+	padding: 0.2em 0.6em;
+}
+.formulario input [type="text"],
+.formulario input [type="url"]
+
+{
+	border-radius: 1px solid #888;
+}
+
+
+.formulario input[type="submit"]
+{
+	background: #22BCE0;
+	border:1px solid #22BCE0;
+	
+	box-shadow: rgba(0,0,0,0.5) 5px 5px 20px;
+	color: white;
+	font-style: italic;
+	
+	text-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
+}
+
+
+
+/*prueba de examen
+
+.spin{
+	
+}*/
+.spin:hover	{
+	transition: transform 0.5 ease;
+	transform: rotate(360deg) scale(0.5, 0.5);
 }
